# MO644-parallel-programming

./: .gitignore  CMakeLists.txt  README.md
t1/: CMakeLists.txt  main.c
t1/inputs/: arq1.in  arq2.in  arq3.in
t1/outputs/: arq1.res  arq2.res  arq3.res
t10/: mvt.c  mvt_openmp.c  t10.sh
t11/: .gitignore  analisador.scala  build.sbt
t11/inputs/: warw10.txt  wizoz10.txt
t11/outputs/: alice30_x_warw10.txt  warw10_x_wizoz10.txt
t12/: cloud_rtl.ini.azure  cloud_rtl_local.ini  code-t12.c  init.sh  results.txt
t12/relatorio/: relatorio.aux  relatorio.tex
t2/: CMakeLists.txt  main.c  serial.c
t2/inputs/: arq1.in  arq2.in  arq3.in
t2/outputs/: arq1.res  arq2.res  arq3.res
t3/: Dockerfile  main.c  output  tests.sh
t3/codes/: main_parallel_no_optimized.c  main_parallel_optimized.c  main_serial_no_optimized.c  main_serial_optimized.c
t3/inputs/: arq1.in  arq2.in  arq3.in  arqtest.in
t3/inputs/tests/: arq1_1.in  arq1_16.in  arq1_4.in  arq1_8.in  arq2_1.in  arq2_16.in  arq2_4.in  arq2_8.in  arq3_1.in  arq3_16.in  (+2 more)
t3/outputs/: arq1.res  arq2.res  arq3.res  arqtest.res
t4/: pi_parallel.c  pi_serial.c
t4/inputs/: arq2.in  arq3.in
t4/outputs/: arq1.res  arq2.res  arq3.res
t5/: senha-parallel.c  senha-serial.c  tests.sh
t5/inputs/: arq1.in  arq2.in  arq3.in  arq4.in  arq5.in  arq6.in
t6/: Dockerfile  md5  md5_bmark.c  md5_bmark_parallel.c  output  output1  output2  output3
t7/: matrix_add_cuda.cu
t8/: histogram.c  histogram.cu
t9/: .gitignore  smooth_gpu.cu  smooth_serial.c
tests/: CMakeLists.txt  hello2.c  sum_array.c  sum_array2.c
(+1 files in other folders)
